removed argline property from pom.xml